Testing the tex file

--- a/project4/latex/report.tex
+++ b/project4/latex/report.tex
@@ -103,7 +103,10 @@ relevant to make sure the model is on the right track. A deviation in the more t
 aims to predict the critical temperature of the ferro magnetic case. 
 \\
 \\
-
+The Ising model is a model based on statistical mechanics of the spin states of a ferro-magnet. The model takes into account the energy state of same spin and alternate spin neighbours and allows these neighbouring particles to interact with each other. The 2 dimensional case allows for the modelling of a magnetic phase transition. Giving us the prediction of a critical temperature, collapse of the magnetic case and thus a phase transition. 
+\\
+\\
+The Ising model originally did not predict a phase transition, but the original model was only of one dimension. Thus the 2 dimensional case being relevant as this allows us to make this prediction. 
 
 % ===========================================
 \section{Methods}\label{sec:methods}
