more work on plots in the document

--- a/project4/latex/anal.tex
+++ b/project4/latex/anal.tex
@@ -230,10 +230,91 @@ TODO: missing anal for the susceptibility (normalized to number of spins)
 \subsection*{The algorithm ?}
 
 % ===========================================
-\section{Results}\label{sec:results}
+\section{Results and Discussion}\label{sec:results}
 
-% ===========================================
-\section{Discussion}\label{sec:discussion}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/testE.pdf} %Imports the figure.
+	\caption{The expectation value of $\epsilon$ for $\log_{10} x$ Monte Carlo cycles compared to the analytical solution for $L=2$.}
+	\label{fig:testE}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/testM.pdf} %Imports the figure.
+	\caption{The expectation value of $|m|$ for $\log_{10} x$ Monte Carlo cycles compared to the analytical solution for $L=2$.}
+	\label{fig:testM}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/testCv.pdf} %Imports the figure.
+	\caption{The expectation value of $C_v$ for $\log_{10} x$ Monte Carlo cycles compared to the analytical solution for $L=2$.}
+	\label{fig:testCv}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/testX.pdf} %Imports the figure.
+	\caption{The expectation value of $\chi$ for $\log_{10} x$ Monte Carlo cycles compared to the analytical solution for $L=2$.}
+	\label{fig:testX}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/burn_inE.pdf} %Imports the figure.
+	\caption{The expectation value of $\epsilon$ for $\log_{10} x$ Monte Carlo cycles for $T=1$ and $T=2.4$ with $L=20$.}
+	\label{fig:burn_inE}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/burn_in|m|.pdf} %Imports the figure.
+	\caption{The expectation value of $|m|$ for $\log_{10} x$ Monte Carlo cycles for $T=1$ and $T=2.4$ with $L=20$.}
+	\label{fig:burn_in|m|}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/hist_T1.pdf} %Imports the figure.
+	\caption{Histogram of $10^6$ $\epsilon$ samples for $L=20$ and $T=1.0$}
+	\label{fig:hist_T1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/hist_T2.pdf} %Imports the figure.
+	\caption{Histogram of $10^6$ $\epsilon$ samples for $L=20$ and $T=2.4$}
+	\label{fig:hist_T2}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/<e>_differing_L.pdf} %Imports the figure.
+	\caption{plot of $\langle\epsilon\rangle$ in the range $T \in [2.1,2.4]$ for $L=40,60,80,100$, each run consisiting of $2*10^5$ Monte Carlo cycles}
+	\label{fig:e_differing}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/<|m|>_differing_L.pdf} %Imports the figure.
+	\caption{plot of $\langle|m|\rangle$ in the range $T \in [2.1,2.4]$ for $L=40,60,80,100$, each run consisiting of $2*10^5$ Monte Carlo cycles}
+	\label{fig:m_differing}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/Cv_differing_L.pdf} %Imports the figure.
+	\caption{plot of $C_v$ in the range $T \in [2.1,2.4]$ for $L=40,60,80,100$, each run consisiting of $2*10^5$ Monte Carlo cycles}
+	\label{fig:Cv_diff_l}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../figs/X_differing_L.pdf} %Imports the figure.
+	\caption{plot of $\chi$ in the range $T \in [2.1,2.4]$ for $L=40,60,80,100$, each run consisiting of $2*10^5$ Monte Carlo cycles}
+	\label{fig:X_diff_l}
+\end{figure}
 %
 
  
