--- a/project4/latex/anal.tex
+++ b/project4/latex/anal.tex
@@ -396,6 +396,23 @@ TODO: missing anal for the susceptibility (normalized to number of spins)
     \caption{All possible states of a  $2 \times 2$ lattice with periodic boundary conditions.}
     \label{tab:possible_states}
 \end{table}
+
+latest piece of fuckings anal
+
+\begin{table}[]
+    \centering
+    \resizebox{\textwidth}{!}{%
+    \begin{tabular}{ll}
+    \textbf{L} & \textbf{T} \\ \hline
+    40 & 2.2633 \\
+    60 & 2.2722 \\
+    80 & 2.2791 \\
+    100 & 2.2653
+    \end{tabular}%
+    }
+    \caption{something}
+    \label{tab:something}
+    \end{table}
     
 
 \end{document}
