--- a/project4/latex/anal.tex
+++ b/project4/latex/anal.tex
@@ -401,15 +401,13 @@ latest piece of fuckings anal
 
 \begin{table}[]
     \centering
-    \resizebox{\textwidth}{!}{%
     \begin{tabular}{ll}
     \textbf{L} & \textbf{T} \\ \hline
     40 & 2.2633 \\
     60 & 2.2722 \\
     80 & 2.2791 \\
     100 & 2.2653
-    \end{tabular}%
-    }
+    \end{tabular}
     \caption{something}
     \label{tab:something}
     \end{table}
