--- a/project5/latex/anal.tex
+++ b/project5/latex/anal.tex
@@ -1,40 +1,3 @@
-%% USEFUL LINKS:
-%% -------------
-%%
-%% - UiO LaTeX guides:          https://www.mn.uio.no/ifi/tjenester/it/hjelp/latex/
-%% - Mathematics:               https://en.wikibooks.org/wiki/LaTeX/Mathematics
-%% - Physics:                   https://ctan.uib.no/macros/latex/contrib/physics/physics.pdf
-%% - Basics of Tikz:            https://en.wikibooks.org/wiki/LaTeX/PGF/Tikz
-%% - All the colors!            https://en.wikibooks.org/wiki/LaTeX/Colors
-%% - How to make tables:        https://en.wikibooks.org/wiki/LaTeX/Tables
-%% - Code listing styles:       https://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
-%% - \includegraphics           https://en.wikibooks.org/wiki/LaTeX/Importing_Graphics
-%% - Learn more about figures:  https://en.wikibooks.org/wiki/LaTeX/Floats,_Figures_and_Captions
-%% - Automagic bibliography:    https://en.wikibooks.org/wiki/LaTeX/Bibliography_Management  (this one is kinda difficult the first time)
-%%
-%%                              (This document is of class "revtex4-1", the REVTeX Guide explains how the class works)
-%%   REVTeX Guide:              http://www.physics.csbsju.edu/370/papers/Journal_Style_Manuals/auguide4-1.pdf
-%%
-%% COMPILING THE .pdf FILE IN THE LINUX IN THE TERMINAL
-%% ----------------------------------------------------
-%%
-%% [terminal]$ pdflatex report_example.tex
-%%
-%% Run the command twice, always.
-%%
-%% When using references, footnotes, etc. you should run the following chain of commands:
-%%
-%% [terminal]$ pdflatex report_example.tex
-%% [terminal]$ bibtex report_example
-%% [terminal]$ pdflatex report_example.tex
-%% [terminal]$ pdflatex report_example.tex
-%%
-%% This series of commands can of course be gathered into a single-line command:
-%% [terminal]$ pdflatex report_example.tex && bibtex report_example.aux && pdflatex report_example.tex && pdflatex report_example.tex
-%%
-%% ----------------------------------------------------
-
-
 \documentclass[english,notitlepage,reprint,nofootinbib]{revtex4-1}  % defines the basic parameters of the document
 % For preview: skriv i terminal: latexmk -pdf -pvc filnavn
 % If you want a single-column, remove "reprint"
@@ -73,63 +36,9 @@
 
 
 \begin{document}
-	
-\title{Cool title}  % self-explanatory
-\author{Sverre Wehn Noremsaune, Jon Aleksander Prøitz, Marius Torsvoll, Frida Marie Engøy Westby} % self-explanatory
-\date{\today}                             % self-explanatory
-\noaffiliation                            % ignore this, but keep it.
-
-%This is how we create an abstract section.
-\begin{abstract}
-    TODO
-\end{abstract}
-\maketitle
-	
-	
-% ===========================================
-\section{Introduction}
-%
-TODO
-
-
-% ===========================================
-\section{Methods}\label{sec:methods}
-%
-\subsection{Crank-Nicolson}
-We have used the Crank-Nicolson approach on
-
-\begin{equation} \label{eq:partial}
-    i \frac{\partial u}{\partial t} = - \frac{\partial^2 u}{\partial x^2} - \frac{\partial^2 u}{\partial y^2} + v(x,y)u,
-\end{equation}
-
-and as seen in appendix \ref{sec:ap2}.
-
-% ===========================================
-\subsection*{Algorithms}
-%
-TODO
-
-
-% ===========================================
-\section{Results and discussion}\label{sec:results}
-%
-TODO
-	
-	
-% ===========================================
-\section{Conclusion}\label{sec:conclusion}
-%
-TODO
-
-\newpage
 \onecolumngrid
-\appendix
-\section{GitHub repository} \label{sec:ap1}
-\url{https://github.com/sverrewn/FYS3150/tree/project5/project5} 
 
-\section{Crank-Nicolson: Analytiacal discretizing of equation (\ref{eq:partial})} \label{sec:ap2}
-
-We have the equation (\ref{eq:partial}):   
+We have:   
 
 \begin{equation}
     i \frac{\partial u}{\partial t} = - \frac{\partial^2 u}{\partial x^2} - \frac{\partial^2 u}{\partial y^2} + v(x,y)u
@@ -200,8 +109,5 @@ and by switching the signs, we finally get:
 \end{split}    
 \end{align}
 
-%\bibliographystyle{apalike}
-\bibliography{ref}
-	
-	
-\end{document} 
+
+\end{document}
